<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EventsSearcher</string>
    
    <!-- Search events tab. -->
    <string name="search_tab_name">Search events</string>
    <string name="from_date">Pick from date</string>
    <string name="to_date">Pick to date</string>    
    <string name="organiser">Organiser:</string>
    <string name="description">Event description:</string>
    <string name="find_button_text">Find events!</string>
    <string name="list_events_title">Finded events</string>
    <string name="organiser_title">Organiser</string>
    <string name="category_title">Category</string>
    <string name="start_date_title">Start date</string>
    <string name="short_description_title">Short description</string>
    <string name="show_detail_title">Show detail</string>
    <string name="alert_detail">Description of Event</string> 
    
    <!-- Add event tab. -->
    <string name="add_tab_name">Add event</string>
    <string-array name="category_select">
        <item>CVUT lecture</item>
        <item>Tea party</item>
        <item>Sport event</item>
        <item>Music event</item>
    </string-array>
    <string name="category_description">Select category:</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_time">Pick time</string>
    <string name="event_start">Start event date:</string>
    <string name="event_stop">End event date:</string>
    <string name="short_description">Short description of event:</string>
    <string name="long_description">Details of event:</string>
    <string name="add_event_button">Add event to database!</string>
    <string name="show_detail">Show details</string>
    <string name="error_data">Please fill all required records!</string>
    <string name="add_event_ok">Event was successfully added!</string>
    <string name="add_event_fail">Error while adding new event to DB!</string>
    
      
        
</resources>